force-app/main/default/objects/Alpaca__c/Alpaca__c.object-meta.xml
<CustomObject>
    <label>Alpaca</label>
    <nameField>
        <label>Alpaca Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Alpacas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>