force-app/main/default/objects/Alpaca__c/fields/Farm__c.field-meta.xml
<CustomField>
    <fullName>Farm__c</fullName>
    <label>Farm</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>