force-app/main/default/objects/Alpaca__c/fields/Sheerable__c.field-meta.xml
<CustomField>
    <fullName>Sheerable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is the Alpaca currently ready to be sheered?</description>
    <label>Sheerable</label>
    <type>Checkbox</type>
</CustomField>