force-app/main/default/objects/Alpaca__c/fields/Yield_kg__c.field-meta.xml
<CustomField>
    <fullName>Yield_kg__c</fullName>
    <description>Expected wool yield in KG</description>
    <label>Yield (kg)</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>